[tool.poetry]
name = "pdf2sb"
version = "0.3.7"
description = "Upload PDF file to Gyazo as images then convert Scrapbox format"
license = "MIT"
authors = ["reiyw <reiyw.setuve@gmail.com>"]
readme = "README.md"
repository = "https://github.com/reiyw/pdf2sb"

[tool.poetry.dependencies]
python = "^3.6"
pdf2image = "^1.4"
python-gyazo = "^1.1"
click = "^7.0"
pypdf2 = "^1.26"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.3"
pylint = "^2.3"
mypy = "^0.720.0"
rope = "^0.14.0"

[tool.poetry.scripts]
pdf2sb = "pdf2sb:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
